tests/NormalTests/paczka1/fuzzy1/47730192.err
Error in line 16: WB359T41 A39 25,1
Error in line 24: dnDAekwjrT S933 38,2
Error in line 33: j49vkhguAnx S933 0,6
Error in line 12: Ir0 S933 95,4
